# rkyv_intern

./: Cargo.toml
src/: interner.rs  lib.rs
