[package]
name = "rkyv_intern"
version = "0.1.0"
edition = "2018"

[dependencies]
hashbrown = { version = "0.15", optional = true }
rkyv = { version = "0.8", default-features = false }

[features]
default = ["alloc"]
alloc = ["hashbrown", "rkyv/alloc"]
statistics = []

[patch.crates-io]
rkyv = { git = "https://github.com/rkyv/rkyv" }
